--- a/Wisej.DemoBrowser/Wisej.DemoBrowser.csproj
+++ b/Wisej.DemoBrowser/Wisej.DemoBrowser.csproj
@@ -70,6 +70,7 @@
     <Content Include="Images\strike.png" />
     <Content Include="Images\Wisej logo 160px copy.png" />
     <Content Include="Images\wisej.png" />
+    <Content Include="Videos\sample.mp4" />
     <Content Include="Web.config" />
   </ItemGroup>
   <ItemGroup>
