--- a/Wisej.DemoBrowser.Premium/Wisej.Web.Ext.Webix.Demo/Web.config
+++ b/Wisej.DemoBrowser.Premium/Wisej.Web.Ext.Webix.Demo/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <appSettings>
-    <add key="Wisej.LicenseKey" value=""/>
+    <add key="Wisej.LicenseKey" value="ad2b13d63cb060fb7f235e47425bad6a"/>
     <add key="Wisej.DefaultTheme" value="Bootstrap-4"/>
   </appSettings>
   <system.web>
