--- a/Wisej.DemoBrowser.Premium/Wisej.Web.Ext.Kendo.Demo/Web.config
+++ b/Wisej.DemoBrowser.Premium/Wisej.Web.Ext.Kendo.Demo/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <appSettings>
-    <add key="Wisej.LicenseKey" value=""/>
+    <add key="Wisej.LicenseKey" value="b3e6037c49e9cba89d899ec635856905"/>
     <add key="Wisej.DefaultTheme" value="Bootstrap-4"/>
   </appSettings>
   <system.web>
