--- a/Demos/Extensions/Wisej.DemoBrowser.ChartJS/Wisej.DemoBrowser.ChartJS.csproj
+++ b/Demos/Extensions/Wisej.DemoBrowser.ChartJS/Wisej.DemoBrowser.ChartJS.csproj
@@ -1,143 +1,22 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="15.0" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
-  <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{D4C5CC75-0EE1-4048-99E7-4AA591F4EA55}</ProjectGuid>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Wisej.DemoBrowser.ChartJS</RootNamespace>
-    <AssemblyName>Wisej.DemoBrowser.ChartJS</AssemblyName>
-    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
-    <FileAlignment>512</FileAlignment>
-    <Deterministic>true</Deterministic>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\Debug\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\Release\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <ItemGroup>
-    <Reference Include="System" />
-    <Reference Include="System.Drawing" />
-    <Reference Include="System.Windows.Forms" />
-    <Reference Include="Microsoft.CSharp" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="Line.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="Line.Designer.cs">
-      <DependentUpon>Line.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Bar.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="Bar.Designer.cs">
-      <DependentUpon>Bar.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Radar.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="Radar.Designer.cs">
-      <DependentUpon>Radar.cs</DependentUpon>
-    </Compile>
-    <Compile Include="PolarArea.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="PolarArea.Designer.cs">
-      <DependentUpon>PolarArea.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Pie.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="Pie.Designer.cs">
-      <DependentUpon>Pie.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Doughnut.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="Doughnut.Designer.cs">
-      <DependentUpon>Doughnut.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Features.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="Features.Designer.cs">
-      <DependentUpon>Features.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Bubble.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="Bubble.Designer.cs">
-      <DependentUpon>Bubble.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Scatter.cs">
-      <SubType>UserControl</SubType>
-    </Compile>
-    <Compile Include="Scatter.Designer.cs">
-      <DependentUpon>Scatter.cs</DependentUpon>
-    </Compile>
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\..\..\Wisej.DemoBrowser.Common\Wisej.DemoBrowser.Common.csproj">
-      <Project>{1f0b2e9e-6624-4db8-810f-48a7bc531a29}</Project>
-      <Name>Wisej.DemoBrowser.Common</Name>
-    </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="Wisej-2">
-      <Version>2.5.*-*</Version>
-    </PackageReference>
-    <PackageReference Include="Wisej-2-ChartJS">
-      <Version>2.5.*-*</Version>
-    </PackageReference>
-    <PackageReference Include="Wisej-2-ChartJS3">
-      <Version>2.5.29</Version>
-    </PackageReference>
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Line.resx">
-      <DependentUpon>Line.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Bar.resx">
-      <DependentUpon>Bar.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Radar.resx">
-      <DependentUpon>Radar.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="PolarArea.resx">
-      <DependentUpon>PolarArea.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Pie.resx">
-      <DependentUpon>Pie.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Doughnut.resx">
-      <DependentUpon>Doughnut.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Features.resx">
-      <DependentUpon>Features.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Bubble.resx">
-      <DependentUpon>Bubble.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Scatter.resx">
-      <DependentUpon>Scatter.cs</DependentUpon>
-    </EmbeddedResource>
-  </ItemGroup>
-  <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+﻿<Project Sdk="Microsoft.NET.Sdk">
+
+	<PropertyGroup>
+		<TargetFrameworks>net48;net6.0</TargetFrameworks>
+		<PlatformTarget>AnyCPU</PlatformTarget>
+		<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+		<CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
+		<EmbeddedResourceUseDependentUponConvention>true</EmbeddedResourceUseDependentUponConvention>
+		<NoWarn>CA1416</NoWarn>
+	</PropertyGroup>
+
+	<ItemGroup Condition="'$(TargetFramework.TrimEnd(`0123456789`))'=='net'">
+		<Reference Include="System.Windows.Forms" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<PackageReference Include="Wisej-3" Version="3.*-*" />
+		<PackageReference Include="Wisej-3-ChartJS" Version="3.*-*" />
+		<ProjectReference Include="..\..\..\Wisej.DemoBrowser.Common\Wisej.DemoBrowser.Common.csproj" />
+	</ItemGroup>
+
 </Project>
