--- a/Wisej.DemoBrowser/Wisej.DemoBrowser.csproj
+++ b/Wisej.DemoBrowser/Wisej.DemoBrowser.csproj
@@ -1,161 +1,101 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
-<Project ToolsVersion="12.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
-  <Import Project="$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props" Condition="Exists('$(MSBuildExtensionsPath)\$(MSBuildToolsVersion)\Microsoft.Common.props')" />
-  <PropertyGroup>
-    <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
-    <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProductVersion>
-    </ProductVersion>
-    <SchemaVersion>2.0</SchemaVersion>
-    <ProjectTypeGuids>{349c5851-65df-11da-9384-00065b846f21};{fae04ec0-301f-11d3-bf4b-00c04f79efbc}</ProjectTypeGuids>
-    <OutputType>Library</OutputType>
-    <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Wisej.DemoBrowser</RootNamespace>
-    <AssemblyName>Wisej.DemoBrowser</AssemblyName>
-    <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
-    <UseIISExpress>true</UseIISExpress>
-    <IISExpressSSLPort />
-    <IISExpressAnonymousAuthentication />
-    <IISExpressWindowsAuthentication />
-    <IISExpressUseClassicPipelineMode />
-    <UseGlobalApplicationHostFile />
-    <NuGetPackageImportStamp>
-    </NuGetPackageImportStamp>
-    <TargetFrameworkProfile />
-    <Use64BitIISExpress>
-    </Use64BitIISExpress>
-    <ProjectGuid>{9A83DA07-B98C-4805-A73D-1FA672E7AADD}</ProjectGuid>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
-    <DebugSymbols>true</DebugSymbols>
-    <DebugType>full</DebugType>
-    <Optimize>false</Optimize>
-    <OutputPath>bin\</OutputPath>
-    <DefineConstants>DEBUG;TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
-    <DebugType>pdbonly</DebugType>
-    <Optimize>true</Optimize>
-    <OutputPath>bin\</OutputPath>
-    <DefineConstants>TRACE</DefineConstants>
-    <ErrorReport>prompt</ErrorReport>
-    <WarningLevel>4</WarningLevel>
-  </PropertyGroup>
-  <ItemGroup>
-    <Content Include="Default.html" />
-    <Content Include="Default.json" />
-    <Content Include="favicon.ico" />
-    <Content Include="DemoBrowser.json" />
-    <EmbeddedResource Include="Themes\DemoBrowser.mixin.theme" />
-    <EmbeddedResource Include="Themes\IconsListView.mixin.theme" />
-    <None Include="Web.Debug.config">
-      <DependentUpon>Web.config</DependentUpon>
-    </None>
-    <None Include="Web.Release.config">
-      <DependentUpon>Web.config</DependentUpon>
-    </None>
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="Images\book.png" />
-    <Content Include="Images\collapse icon.png" />
-    <EmbeddedResource Include="Images\combo.png" />
-    <EmbeddedResource Include="Images\html.png" />
-    <Content Include="Images\Icon Buy.png" />
-    <Content Include="Images\Icon Contact.png" />
-    <Content Include="Images\Icon Free Trial.png" />
-    <Content Include="Images\search.png" />
-    <Content Include="Images\splash.png" />
-    <Content Include="Images\strike.png" />
-    <Content Include="Images\Wisej logo 160px copy.png" />
-    <Content Include="Images\wisej.png" />
-    <Content Include="Media\sample.mp3" />
-    <Content Include="Media\sample.mp4" />
-    <Content Include="Web.config" />
-  </ItemGroup>
-  <ItemGroup>
-    <Compile Include="MainView.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="MainView.Designer.cs">
-      <DependentUpon>MainView.cs</DependentUpon>
-    </Compile>
-    <Compile Include="Program.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Properties\Resources.Designer.cs">
-      <AutoGen>True</AutoGen>
-      <DesignTime>True</DesignTime>
-      <DependentUpon>Resources.resx</DependentUpon>
-    </Compile>
-  </ItemGroup>
-  <ItemGroup>
-    <Reference Include="Microsoft.CSharp" />
-    <Reference Include="System" />
-    <Reference Include="System.Configuration" />
-    <Reference Include="System.Drawing" />
-    <Reference Include="System.Web" />
-    <Reference Include="System.Windows.Forms" />
-    <Reference Include="Wisej.DemoBrowser.Common, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\Wisej.DemoBrowser.Common\bin\Debug\Wisej.DemoBrowser.Common.dll</HintPath>
-      <SpecificVersion>False</SpecificVersion>
-      <Private>True</Private>
-    </Reference>
-  </ItemGroup>
-  <ItemGroup>
-    <EmbeddedResource Include="MainView.resx">
-      <DependentUpon>MainView.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="Properties\Resources.resx">
-      <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
-    </EmbeddedResource>
-  </ItemGroup>
-  <ItemGroup>
-    <PackageReference Include="Wisej-2">
-      <Version>2.5.*-*</Version>
-    </PackageReference>
-    <PackageReference Include="Wisej-2-VisualStudioIcons">
-      <Version>2.5.*-*</Version>
-    </PackageReference>
-  </ItemGroup>
-  <ItemGroup />
-  <PropertyGroup>
-    <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
-    <VSToolsPath Condition="'$(VSToolsPath)' == ''">$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v$(VisualStudioVersion)</VSToolsPath>
-  </PropertyGroup>
-  <PropertyGroup>
-    <RunPostBuildEvent>OnBuildSuccess</RunPostBuildEvent>
-  </PropertyGroup>
-  <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
-  <Import Project="$(VSToolsPath)\WebApplications\Microsoft.WebApplication.targets" Condition="'$(VSToolsPath)' != ''" />
-  <Import Project="$(MSBuildExtensionsPath32)\Microsoft\VisualStudio\v10.0\WebApplications\Microsoft.WebApplication.targets" Condition="false" />
-  <ProjectExtensions>
-    <VisualStudio>
-      <FlavorProperties GUID="{349c5851-65df-11da-9384-00065b846f21}">
-        <WebProjectProperties>
-          <UseIIS>True</UseIIS>
-          <AutoAssignPort>True</AutoAssignPort>
-          <DevelopmentServerPort>52002</DevelopmentServerPort>
-          <DevelopmentServerVPath>/</DevelopmentServerVPath>
-          <IISUrl>http://localhost:5000/</IISUrl>
-          <NTLMAuthentication>False</NTLMAuthentication>
-          <UseCustomServer>False</UseCustomServer>
-          <CustomServerUrl>
-          </CustomServerUrl>
-          <SaveServerSettingsInUserFile>False</SaveServerSettingsInUserFile>
-        </WebProjectProperties>
-      </FlavorProperties>
-    </VisualStudio>
-  </ProjectExtensions>
-  <PropertyGroup>
-    <PostBuildEvent>for /R "$(SolutionDir)Demos\" %25%25f in (bin\$(ConfigurationName)\*.dll) do copy %25%25f "$(TargetDir)"</PostBuildEvent>
-  </PropertyGroup>
-  <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
-       Other similar extension points exist, see Microsoft.Common.targets.
-  <Target Name="BeforeBuild">
-  </Target>
-  <Target Name="AfterBuild">
-  </Target>
-  -->
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
+
+	<PropertyGroup>
+		<TargetFrameworks>net48;net6.0</TargetFrameworks>
+		<PlatformTarget>AnyCPU</PlatformTarget>
+		<GenerateAssemblyInfo>false</GenerateAssemblyInfo>
+		<EmbeddedResourceUseDependentUponConvention>true</EmbeddedResourceUseDependentUponConvention>
+		<NoWarn>CA1416</NoWarn>
+	</PropertyGroup>
+
+	<PropertyGroup Condition="'$(TargetFramework.TrimEnd(`0123456789`))'=='net'">
+		<OutputPath>bin\</OutputPath>
+		<StartupObject></StartupObject>
+		<OutputType>Library</OutputType>
+		<RunCommand>$(ProgramFiles)\IIS Express\iisexpress.exe</RunCommand>
+		<AppendTargetFrameworkToOutputPath>false</AppendTargetFrameworkToOutputPath>
+		<RunArguments>/path:"$(MSBuildProjectDirectory)" /port:5000</RunArguments>
+	</PropertyGroup>
+
+	<PropertyGroup Condition="'$(TargetFramework.TrimEnd(`0123456789`))'!='net'">
+		<StartupObject>$(RootNamespace).Startup</StartupObject>
+	</PropertyGroup>
+
+	<ItemGroup Condition="'$(TargetFramework.TrimEnd(`0123456789`))'=='net'">
+		<Reference Include="System.Windows.Forms" />
+		<Compile Remove="Startup.cs" />
+		<Content Include="Startup.cs" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<Content Update="Default.json">
+			<CopyToOutputDirectory>Never</CopyToOutputDirectory>
+		</Content>
+		<Content Update="Web.config">
+			<CopyToOutputDirectory>Never</CopyToOutputDirectory>
+		</Content>
+	</ItemGroup>
+
+	<ItemGroup>
+		<None Remove="Default.html" />
+		<None Remove="favicon.ico" />
+		<None Remove="GoogleMapsAPIKey.txt" />
+		<None Remove="Images\book.png" />
+		<None Remove="Images\collapse icon.png" />
+		<None Remove="Images\combo.png" />
+		<None Remove="Images\html.png" />
+		<None Remove="Images\Icon Buy.png" />
+		<None Remove="Images\Icon Contact.png" />
+		<None Remove="Images\Icon Free Trial.png" />
+		<None Remove="Images\search.png" />
+		<None Remove="Images\splash.png" />
+		<None Remove="Images\strike.png" />
+		<None Remove="Images\Wisej logo 160px copy.png" />
+		<None Remove="Images\wisej-logo.png" />
+		<None Remove="Images\wisej.png" />
+		<None Remove="Themes\DemoBrowser.mixin.theme" />
+		<None Remove="Themes\IconsListView.mixin.theme" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<Content Include="Default.html">
+			<CopyToPublishDirectory>Always</CopyToPublishDirectory>
+		</Content>
+		<Content Include="favicon.ico">
+			<CopyToPublishDirectory>Always</CopyToPublishDirectory>
+		</Content>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <EmbeddedResource Include="Images\book.png" />
+	  <EmbeddedResource Include="Images\collapse icon.png" />
+	  <EmbeddedResource Include="Images\combo.png" />
+	  <EmbeddedResource Include="Images\html.png" />
+	  <EmbeddedResource Include="Images\Icon Buy.png" />
+	  <EmbeddedResource Include="Images\Icon Contact.png" />
+	  <EmbeddedResource Include="Images\Icon Free Trial.png" />
+	  <EmbeddedResource Include="Images\search.png" />
+	  <EmbeddedResource Include="Images\splash.png" />
+	  <EmbeddedResource Include="Images\strike.png" />
+	  <EmbeddedResource Include="Images\Wisej logo 160px copy.png" />
+	  <EmbeddedResource Include="Images\wisej-logo.png" />
+	  <EmbeddedResource Include="Images\wisej.png" />
+	  <EmbeddedResource Include="Themes\DemoBrowser.mixin.theme" />
+	  <EmbeddedResource Include="Themes\IconsListView.mixin.theme" />
+	</ItemGroup>
+
+	<ItemGroup>
+		<PackageReference Include="Wisej-3" Version="3.*-*" />
+		<PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <ProjectReference Include="..\Demos\Extensions\Wisej.DemoBrowser.AceEditor\Wisej.DemoBrowser.AceEditor.csproj" />
+	  <ProjectReference Include="..\Wisej.DemoBrowser.Common\Wisej.DemoBrowser.Common.csproj" />
+	</ItemGroup>
+
+	<Target Name="PostBuild" AfterTargets="PostBuildEvent">
+	  <Exec Command="for /R &quot;$(SolutionDir)Demos\&quot; %25%25f in (bin\$(ConfigurationName)\$(TargetFramework)\*.dll) do copy %25%25f &quot;$(TargetDir)\&quot;" />
+	</Target>
+
 </Project>
