FlowLayoutPanel demo update, and checking the font dependenie on Linux (macOS is still WIP).

--- a/Demos/Containers/Wisej.DemoBrowser.FlowLayoutPanel/Wisej.DemoBrowser.FlowLayoutPanel.csproj
+++ b/Demos/Containers/Wisej.DemoBrowser.FlowLayoutPanel/Wisej.DemoBrowser.FlowLayoutPanel.csproj
@@ -14,6 +14,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+		<PackageReference Include="Bogus" Version="34.0.2" />
 		<PackageReference Include="Wisej-3" Version="3.*-*" />
 		<ProjectReference Include="..\..\..\Wisej.DemoBrowser.Common\Wisej.DemoBrowser.Common.csproj" />
 	</ItemGroup>
