--- a/Demos/ToolsAndMenus/Wisej.DemoBrowser.ContextMenu/Wisej.DemoBrowser.ContextMenu.csproj
+++ b/Demos/ToolsAndMenus/Wisej.DemoBrowser.ContextMenu/Wisej.DemoBrowser.ContextMenu.csproj
@@ -18,4 +18,19 @@
 		<ProjectReference Include="..\..\..\Wisej.DemoBrowser.Common\Wisej.DemoBrowser.Common.csproj" />
 	</ItemGroup>
 
+	<ItemGroup>
+	  <Compile Update="Properties\Resources.Designer.cs">
+	    <DesignTime>True</DesignTime>
+	    <AutoGen>True</AutoGen>
+	    <DependentUpon>Resources.resx</DependentUpon>
+	  </Compile>
+	</ItemGroup>
+
+	<ItemGroup>
+	  <EmbeddedResource Update="Properties\Resources.resx">
+	    <Generator>ResXFileCodeGenerator</Generator>
+	    <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+	  </EmbeddedResource>
+	</ItemGroup>
+
 </Project>
