--- a/Demos/Grids/Wisej.DemoBrowser.DataGridView/Wisej.DemoBrowser.DataGridView.csproj
+++ b/Demos/Grids/Wisej.DemoBrowser.DataGridView/Wisej.DemoBrowser.DataGridView.csproj
@@ -14,6 +14,16 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <None Remove="Images\star-filled.png" />
+	  <None Remove="Images\star.png" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <EmbeddedResource Include="Images\star-filled.png" />
+	  <EmbeddedResource Include="Images\star.png" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<PackageReference Include="Bogus" Version="34.0.2" />
 		<PackageReference Include="Wisej-3" Version="3.*-*" />
 		<PackageReference Include="Microsoft.CSharp" Version="4.7.0" />		<ProjectReference Include="..\..\..\Wisej.DemoBrowser.Common\Wisej.DemoBrowser.Common.csproj" />
