--- a/Demos/Extensions/Wisej.DemoBrowser.OfficeViewer/Wisej.DemoBrowser.OfficeViewer.csproj
+++ b/Demos/Extensions/Wisej.DemoBrowser.OfficeViewer/Wisej.DemoBrowser.OfficeViewer.csproj
@@ -24,13 +24,13 @@
 
 	<ItemGroup>
 	  <EmbeddedResource Include="Files\excel_sample.xls">
-	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	    <CopyToOutputDirectory>Never</CopyToOutputDirectory>
 	  </EmbeddedResource>
 	  <EmbeddedResource Include="Files\powerpoint_sample.ppt">
-	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	    <CopyToOutputDirectory>Never</CopyToOutputDirectory>
 	  </EmbeddedResource>
 	  <EmbeddedResource Include="Files\word_sample.doc">
-	    <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	    <CopyToOutputDirectory>Never</CopyToOutputDirectory>
 	  </EmbeddedResource>
 	  <EmbeddedResource Include="Icons\excel.svg" />
 	  <EmbeddedResource Include="Icons\powerpoint.svg" />
