kendo sample updates.

--- a/Wisej.DemoBrowser.Premium/Wisej.Web.Ext.Kendo.Demo/Web.config
+++ b/Wisej.DemoBrowser.Premium/Wisej.Web.Ext.Kendo.Demo/Web.config
@@ -5,7 +5,7 @@
   -->
 <configuration>
   <appSettings>
-    <add key="Wisej.LicenseKey" value=""/>
+    <add key="Wisej.LicenseKey" value="082a60abfd150e361115f3d6459cb4f0"/>
     <add key="Wisej.DefaultTheme" value="Bootstrap-4"/>
   </appSettings>
   <system.web>
