--- a/Demos/Extensions/Wisej.DemoBrowser.NavigationBar/Wisej.DemoBrowser.NavigationBar.csproj
+++ b/Demos/Extensions/Wisej.DemoBrowser.NavigationBar/Wisej.DemoBrowser.NavigationBar.csproj
@@ -14,6 +14,14 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <None Remove="Images\person.jpg" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <EmbeddedResource Include="Images\person.jpg" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<PackageReference Include="Wisej-3" Version="3.*-*" />
 		<PackageReference Include="Wisej-3-NavigationBar" Version="3.*-*" />
 		<ProjectReference Include="..\..\..\Wisej.DemoBrowser.Common\Wisej.DemoBrowser.Common.csproj" />
