--- a/Demos/Extensions/Wisej.DemoBrowser.TinyMCE/Wisej.DemoBrowser.TinyMCE.csproj
+++ b/Demos/Extensions/Wisej.DemoBrowser.TinyMCE/Wisej.DemoBrowser.TinyMCE.csproj
@@ -14,8 +14,17 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <None Remove="data.html" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <EmbeddedResource Include="data.html" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<PackageReference Include="Wisej-3" Version="3.*-*" />
 		<PackageReference Include="Wisej-3-TinyMCE" Version="3.*-*" />
+		<PackageReference Include="Microsoft.CSharp" Version="4.7.0" />
 		<ProjectReference Include="..\..\..\Wisej.DemoBrowser.Common\Wisej.DemoBrowser.Common.csproj" />
 	</ItemGroup>
 
