fixes for Kendo,EJ1 and part of EJ2 broken demos.

--- a/.gitignore
+++ b/.gitignore
@@ -351,3 +351,5 @@ MigrationBackup/
 
 .DS_Store
 /Wisej.DemoBrowser/GoogleMapsAPIKey.txt
+
+Wisej.DemoBrowser.Premium/Wisej.Web.Ext.Kendo.Demo/wisej-server.lic
