--- a/Wisej.DemoBrowser.Premium/Wisej.Web.Ext.DevExtreme.Demo/Web.config
+++ b/Wisej.DemoBrowser.Premium/Wisej.Web.Ext.DevExtreme.Demo/Web.config
@@ -39,6 +39,7 @@
     </security>
     <defaultDocument enabled="true">
       <files>
+		<clear />
         <add value="Default.html"/>
       </files>
     </defaultDocument>
